# Lidar_AI_Solution_Copy

./: .gitignore
CUDA-BEVFusion/: .gitignore  CMakeLists(OG).txt  CMakeLists.txt  README.md
CUDA-BEVFusion/custom-example/: camera2ego.tensor  camera2lidar.tensor  camera_intrinsics.tensor  images.tensor  img_aug_matrix.tensor  lidar2camera.tensor  lidar2ego.tensor  lidar2image.tensor  lidar_aug_matrix.tensor  points.tensor
CUDA-BEVFusion/src/: custom_main.cpp
CUDA-BEVFusion/tool/: custom_build_trt_engine.sh  custom_environment(deprecated).sh  custom_environment.sh  custom_pybev.py  custom_run.sh  extract_mcap_sample2.py  extract_mcap_sample3.py  make_custom_tensors.py  make_custom_tensors2.py  timeconvert.py
